--- a/style.css
+++ b/style.css
@@ -9,11 +9,51 @@
     font-weight: 700;
     margin-bottom: 50px;
 }
+.precious img{
+    height:364px;
+}
+.precious img:hover{
+    width: 100%;
+    height: 400px;
+    background: red;
+    transition: width 1s, height 5s;
+}
+.package-list p{
+    font-size: 15px;
+    color:#848199;
+    margin: 0;
+    
+}
+.package-list button{
+    margin-top: 24px;
+    background-color: #F496D1 #3F87F5;
+    border-radius: 25px;
+    width: 207px;
+    height: 45px;
+    border: 0px;
+    color: rgb(0, 167, 233);
+}
+.hot{
+    border: 1px solid #FF4E4E;
+    width: 40px;
+    border-radius: 40%;
+    background-color: #FF4E4E;
+    color: white;
+}
+#spatial-Card{
+    border-radius: 5%;
+    box-shadow: 10px 10px 5px 12px rgb(235, 235, 235);
+    padding-top: 50px;
+
+}
 @media  screen and (max-width: 576px) {
     .slider button{
         margin: 0;
     }
     .slider-img img{
         height: 500px;
+    }
+    .card{
+        width: auto;
     }
 }
